--- a/css/style.css
+++ b/css/style.css
@@ -22,15 +22,16 @@
 }
 
 .search_map {
-    float: right;
+    
 }
 
 .hidden {
 	display: none;
 }
 
-li {
+ul {
     display: block;
+    list-style-type: none;
     padding: 5px;
 	margin-right: 200px;
 	border: 1px solid black
