--- a/css/style.css
+++ b/css/style.css
@@ -17,31 +17,51 @@ body {
 }
 
 .search-artist {
-   /*float: left;*/
    text-align: center;
 }
 
 .names ul {
     color: blue;
     background-color: #ebecf7;
-    /*width: 33%;*/
     text-align: center;
-    
+    margin: 100px auto;
+
 }
 
-.projects {
-    
-
+.projects_list {
+    display: inline-block;
+    background-color: #ebecf7;
+    margin: 10px;
+    color: blue;
 }
 
 .hidden {
 	display: none;
 }
 
+li {
+    
+}
+
 ul {
     text-align: center;
-    display: block;
     list-style-type: none;
     padding: 5px;
-    margin-top: 100px;
+}
+
+
+
+
+/*Media Queries */
+
+@media screen and (min-width: 500px) {
+    
+.names ul {
+    width: 50%;
+} 
+
+.projects_list {
+    width: 30%;
+}
+
 }
